--- a/index.html.html
+++ b/index.html.html
@@ -17,7 +17,11 @@
 			padding: 20px 30px;
 		}
 		.namaz{
-
+			display: flex;
+			height: 90vh;
+			flex-direction: column;
+			justify-content: center;
+/*			justify-content: center;*/
 		}
 		.salah{
 			display: flex;
@@ -29,7 +33,7 @@
 			padding: 20px;
 			background-color: #051014;
 			box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.8);
-			margin: 10px;
+			margin: 5px;
 			
 		}
 		.salah h2:nth-child(2){
@@ -48,19 +52,19 @@
 		</div>
 		<div class="salah">
 			<h2>Zuhar</h2>
-			<h2>5:30 AM</h2>
+			<h2>1:30 PM</h2>
 		</div>
 		<div class="salah">
 			<h2>Asr</h2>
-			<h2>5:30 AM</h2>
+			<h2>5:00 PM</h2>
 		</div>
 		<div class="salah">
 			<h2>Maghrib</h2>
-			<h2>5:30 AM</h2>
+			<h2>6:37 PM</h2>
 		</div>
 		<div class="salah">
 			<h2>Isha</h2>
-			<h2>5:30 AM</h2>
+			<h2>8:30 PM</h2>
 		</div>
 	</div>
 
