--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Salah</title>
+	<link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-rounded/css/uicons-solid-rounded.css'>
 	<style>
 		*{
 			margin: 0;
@@ -14,7 +15,15 @@
 		header{
 			background-color: black ;
 			color: white;
+			display: flex;
+			align-items: center;
 			padding: 20px 30px;
+		}
+		img{
+			height: 50px;
+			width: 50px;
+			margin-left: 20px;
+
 		}
 		.namaz{
 			display: flex;
@@ -43,6 +52,7 @@
 </head>
 <header>
 	<h1>Salah Timing</h1>
+	<img src="logo.png">
 </header>
 <body>
 	<div class="namaz">
